--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,24 @@
 {
-    "compilerOptions": {
-        "module": "ES6",
-        "target": "ES5",
-        "lib": ["ES2020", "DOM"],
-        "declaration": true,
-        "outDir": "./dist/lib/es6",
-        "moduleResolution": "node",
-    },
-    "include": ["src/**/*"],
+  "compilerOptions": {
+    "module": "ES6",
+    "target": "ES5",
+    "lib": ["ES2020", "DOM"],
+    "declaration": true,
+    "outDir": "./dist/lib/es6",
+
+    "moduleResolution": "node",
+
+    "verbatimModuleSyntax": true,
+
+    // Best practices
+    "strict": true,
+    "skipLibCheck": true,
+    "noFallthroughCasesInSwitch": true,
+
+    // Some stricter flags (disabled by default)
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noPropertyAccessFromIndexSignature": false
+  },
+  "include": ["src/**/*"]
 }
