--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
     "type": "module",
     "scripts": {
         "compile": "rmdir .\\dist\\lib /s && tsc && tsc --build tsconfig.es5.json",
-        "test": "echo \"Error: no test specified\" && exit 1",
         "start": "bun run src/index.ts",
         "dev": "bun run --watch src/index.ts"
     },
     "license": "MIT",
     "devDependencies": {
+        "@types/jest": "^29.5.14",
         "@types/node": "^22.10.1",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.2.5",
         "tslib": "^2.8.1",
         "typescript": "^5.7.2"
     },
     "dependencies": {
-        "cheerio": "^1.0.0"
+        "cheerio": "^1.0.0",
+        "uninstall": "^0.0.0"
     }
 }
