--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "typescript": "^5.7.2"
     },
     "dependencies": {
+        "@tauri-apps/api": "^2.1.1",
+        "@tauri-apps/plugin-http": "^2.0.1",
         "cheerio": "^1.0.0",
         "uninstall": "^0.0.0"
     }
