--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "dependencies": {
         "@tauri-apps/api": "^2.1.1",
         "@tauri-apps/plugin-http": "^2.0.1",
-        "cheerio": "^1.0.0",
-        "uninstall": "^0.0.0"
+        "cheerio": "^1.0.0"
     }
 }
