--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,13 @@
 {
   "compilerOptions": {
-    "module": "ES6",
-    "target": "ES5",
-    "lib": ["ES2020", "DOM"],
-    "declaration": true,
-    "outDir": "./dist/lib/es6",
-
-    "moduleResolution": "node",
-
-    "verbatimModuleSyntax": true,
-
-    // Best practices
+    "target": "ES2015",
+    "moduleResolution": "Node",
     "strict": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "noFallthroughCasesInSwitch": true,
-
-    // Some stricter flags (disabled by default)
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
+    "outDir": "./dist/lib" // Carpeta de salida para compilar el código
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "lib"]
 }
